@@ -17,8 +17,6 @@
 // License along with this library; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 // 
-//  VrmlNodeAppearance.cpp
-//
 
 #include "VrmlNodeAppearance.h"
 #include "VrmlNodeType.h"
@@ -26,6 +24,7 @@
 #include "Viewer.h"
 #include "VrmlNodeMaterial.h"
 #include "VrmlNodeTexture.h"
+#include "VrmlNodeTextureTransform.h"
 
 static VrmlNode *creator( VrmlScene *scene ) 
 { return new VrmlNodeAppearance(scene); }
@@ -220,4 +219,66 @@ void VrmlNodeAppearance::setField(const char *fieldName,
   else if TRY_SFNODE_FIELD(textureTransform, TextureTransform)
   else
     VrmlNode::setField(fieldName, fieldValue);
+}
+
+/**
+ * @brief Get the Material node.
+ *
+ * @returns an SFNode object containing the Material node associated with
+ *          this Appearance.
+ */
+const VrmlSFNode & VrmlNodeAppearance::getMaterial() const {
+    return this->d_material;
+}
+
+/**
+ * @brief Set the Material node.
+ *
+ * @param material an SFNode object containing a Material node
+ */
+void VrmlNodeAppearance::setMaterial(const VrmlSFNode & material) {
+    assert(!material.get() || dynamic_cast<VrmlNodeMaterial *>(material.get()));
+    this->d_material = material;
+}
+
+/**
+ * @brief Get the texture node.
+ *
+ * @return an SFNode object containing the texture node associated with
+ *         this Appearance.
+ */
+const VrmlSFNode & VrmlNodeAppearance::getTexture() const {
+    return this->d_texture;
+}
+
+/**
+ * @brief Set the texture node.
+ *
+ * @param texture an SFNode object containing a texture node.
+ */
+void VrmlNodeAppearance::setTexture(const VrmlSFNode & texture) {
+    assert(!texture.get() || dynamic_cast<VrmlNodeTexture *>(texture.get()));
+    this->d_texture = texture;
+}
+
+/**
+ * @brief Get the TextureTransform node.
+ *
+ * @return an SFNode object containing the TextureTransform node
+ *         associated with this Appearance.
+ */
+const VrmlSFNode & VrmlNodeAppearance::getTextureTransform() const {
+    return this->d_textureTransform;
+}
+
+/**
+ * @brief Set the TextureTransform node.
+ *
+ * @param textureTransform an SFNode object containing a
+ *                         TextureTransform node.
+ */
+void VrmlNodeAppearance::setTextureTransform(const VrmlSFNode & textureTransform) {
+    assert(!textureTransform.get()
+            || dynamic_cast<VrmlNodeTextureTransform *>(textureTransform.get()));
+    this->d_textureTransform = textureTransform;
 }
